KAFKA-17750: Extend kafka-consumer-groups command line tool to support new consumer group
Signed-off-by: PoAn Yang <payang@apache.org>